8352003: Support --add-opens with -XX:+AOTClassLinking